[project]
name = "ml-tensorflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "scipy>=1.16.2",
    "tensorflow>=2.20.0; sys_platform != 'darwin'",
    "tensorflow-cpu>=2.20.0; sys_platform == 'darwin'",
]

[[tool.uv.index]]
url = "http://mirrors.aliyun.com/pypi/simple/"
default = true
