[project]
name = "ml-tensorflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
# workaroud by hiding key to fit different os platform
# requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.6",
    "scipy>=1.16.2",
    # Windows
#    "numpy>=2.3.3; sys_platform != 'darwin'",
#    "tensorflow>=2.20.0; sys_platform != 'darwin'",
    # macOS
#    "numpy>=1.26.4; sys_platform == 'darwin'",
#    "tensorflow-cpu>=2.16.2; sys_platform == 'darwin'",
]

[project.optional-dependencies]
extra-win = [
    "numpy>=2.3.3",
    "tensorflow>=2.20.0"
]
extra-mac = [
    "tensorflow-cpu>=2.16.2",
    "numpy>=1.26.4",
]

[tool.uv]
conflicts = [
    [
      { extra = "extra-win" },
      { extra = "extra-mac" },
    ],
]

[[tool.uv.index]]
url = "http://mirrors.aliyun.com/pypi/simple/"
default = true
